--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="absolute bottom-0 left-0 block w-full p-5">
-    <p class="text-2xl text-right text-white/60">UpTask {{ year }}</p>
+    <p class="text-lg text-right md:text-2xl text-white/60">UpTask {{ year }}</p>
 </footer>
