--- a/frontend/src/app/components/subtasks/subtasks.component.html
+++ b/frontend/src/app/components/subtasks/subtasks.component.html
@@ -17,7 +17,7 @@
             <p class="text-2xl text-center">No tienes subtareas aquí. Empieza agregando una.</p>
         </div>
         }
-        <form class="flex items-center mt-14">
+        <form class="flex flex-col gap-y-4 md:gap-y-0 md:flex-row md:items-center mt-14">
             <label for="new-subtask" class="sr-only">Nueva subtarea</label>
             <div class="relative w-full">
                 <div class="absolute inset-y-0 flex items-center pointer-events-none start-0 ps-3">
@@ -39,7 +39,7 @@
             </div>
 
             <button (click)="addNewSubtask(newSubtaskInput)"
-                class="inline-flex items-center py-2.5 px-3 ms-2 text-lg font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                class="w-full md:w-auto flex justify-center md:inline-flex items-center py-2.5 px-3 md:ms-2 text-lg font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus size-7 me-2"
                     viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
                     stroke-linejoin="round">
@@ -66,21 +66,19 @@
         <ul class="flex flex-col items-center justify-center w-full mt-10 gap-y-5">
             @for( subtask of subtasks; let i = $index; track i){
             <li
-                class="flex items-center justify-between w-full p-3 text-2xl text-black rounded-md bg-white/40 animate-blurred-fade-in">
+                class="flex items-center justify-between w-full p-3 text-xl text-center text-black rounded-md text-balance md:text-2xl bg-white/40 animate-blurred-fade-in">
                 <button (click)="subtaskIsCompleted(subtask.id)">
                     @if(!subtask.completed){
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle" width="44"
-                        height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="size-8 md:size-11" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
                     </svg>
                     }
 
                     @if(subtask.completed){
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-check" width="44"
-                        height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="size-8 md:size-11" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" fill="#ABFEA9" />
                         <path d="M9 12l2 2l4 -4" />
@@ -92,9 +90,8 @@
                 </p>
 
                 <button (click)="deleteSubtask(subtask.id)">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="44"
-                        height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#e53737" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="size-8 md:size-11" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#e53737" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M4 7l16 0" />
                         <path d="M10 11l0 6" />
